--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -1,9 +1,53 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>discover</ion-title>
+    <ion-title>Discover</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+	<ion-grid>
 
+		<ion-row>
+			<ion-col size="12" size-sm="8" offset-sm="2">
+				<ion-card>
+					<ion-card-header>
+						<ion-card-title>{{ loadedPlaces[0].title }}</ion-card-title>
+						<ion-card-subtitle>{{ loadedPlaces[0].price }} EGP (per night)</ion-card-subtitle>
+					</ion-card-header>
+					<ion-img [src]="loadedPlaces[0].imageUrl"></ion-img>
+					<ion-card-content>
+						<p>{{ loadedPlaces[0].description }}</p>
+					</ion-card-content>
+					<div padding>
+						<ion-button
+							fill="clear"
+							color="primary"
+							[routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces[0].id]"
+						>
+							More
+						</ion-button>
+					</div>
+				</ion-card>
+			</ion-col>
+		</ion-row>
+
+		<ion-row>
+			<ion-col size="12" size-sm="8" offset-sm="2">
+				<ion-list>
+					<ion-item
+						*ngFor="let loadedPlace of loadedPlaces.slice(1)"
+						[routerLink]="['/', 'places', 'tabs', 'discover', loadedPlace.id]" detail>
+						<ion-thumbnail slot="start">
+							<ion-img [src]="loadedPlace.imageUrl"></ion-img>
+						</ion-thumbnail>
+						<ion-label>
+							<h2>{{ loadedPlace.title }}</h2>
+							<p>{{ loadedPlace.description }}</p>
+						</ion-label>
+					</ion-item>
+				</ion-list>
+			</ion-col>
+		</ion-row>
+
+	</ion-grid>
 </ion-content>
