--- a/src/app/places/discover/place-details/place-details.page.html
+++ b/src/app/places/discover/place-details/place-details.page.html
@@ -1,9 +1,12 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>place-details</ion-title>
-  </ion-toolbar>
+	<ion-toolbar>
+		<ion-buttons slot="start">
+			<ion-back-button defaultHref="/places/tabs/discover"></ion-back-button>
+		</ion-buttons>
+		<ion-title>Place Details</ion-title>
+	</ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+	<ion-button color="primary" margin (click)="onBooking()">Book</ion-button>
 </ion-content>
